replace + to %20 after urlencode, and just reformating entire code